# ado-helper

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  azure-pipelines.ado-helper-smoke.yml  developer-workflow.md  ideas.md  product-update-workflow.md  qa-test-plan-workflow.md  ticket-workflow.md  workflow.md
repo-inventory/: README.md  index.md
repo-inventory/environments/: _template.md
repo-inventory/projects/: _template.md
repo-inventory/repos/: _template.md
smoke/ado-helper-pipeline-smoke-20260515-232612/: config-show.txt  pipeline-list-after-create.err  pipeline-list-after-create.json  pipeline-list.err  pipeline-log-1.err  pipeline-log-1.txt  pipeline-log-2.err  pipeline-log-2.txt  pipeline-log-3.err  pipeline-log-3.txt  pipeline-log-agentless-task.err  pipeline-log-agentless-task.txt  pipeline-log-follow-agentless.err  pipeline-log-follow-agentless.txt  pipeline-logs-list-agentless-json.err  pipeline-logs-list-agentless-table.err  pipeline-logs-list-agentless-table.txt  pipeline-logs-list-agentless.json  pipeline-logs-list-table-after-fix.err  pipeline-logs-list-table-after-fix.txt  pipeline-logs-list-table.err  pipeline-name.txt  pipeline-preview-agentless-text.err  pipeline-preview-agentless-text.txt  pipeline-preview-json.err  pipeline-preview-json.json  pipeline-preview-text.err  pipeline-preview-text.txt  pipeline-run-agentless.err  pipeline-run-agentless.json  pipeline-run.err  pipeline-runs-agentless-table.err  pipeline-runs-agentless-table.txt  pipeline-runs-json-unfiltered.err  pipeline-runs-json-unfiltered.json  pipeline-runs-table-after-fix.err  pipeline-runs-table-after-fix.txt  pipeline-runs-table.err  pipeline-runs-table.txt  pipeline-status-agentless-final.err  (+21 more)
smoke/ado-helper-smoke-20260515-220926/: cargo-test.txt  cleanup-repo-delete.txt  cleanup-repo-list.json  cleanup-verify.txt  cleanup-wi-delete-4.txt  cleanup-wi-delete-5.txt  config-set-show.txt  config-set-status.txt  config-set.txt  config-show-after-restore.txt  context.txt  git-commit-branch.txt  help-pr.txt  (+103 more)
src/: client.rs  config.rs  context.rs  error.rs  fields.rs  main.rs  output.rs  stdin_ids.rs
tests/: live-e2e.sh
(+72 files in other folders)
