[package]
name = "ado"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ado"
path = "src/main.rs"

[dependencies]
# CLI argument parsing — derive macros generate --help automatically for every subcommand
clap = { version = "4", features = ["derive"] }

# Async runtime — required by reqwest for non-blocking HTTP calls
tokio = { version = "1", features = ["full"] }

# HTTP client — rustls-tls avoids OpenSSL so the Windows binary has no DLL dependencies
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# JSON serialization/deserialization for ADO REST API payloads
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ergonomic error propagation — use anyhow::Result everywhere
anyhow = "1"

# OS-appropriate config directory (%APPDATA% on Windows, ~/.config on Linux/macOS)
dirs = "5"

# TOML config file parsing
toml = "0.8"
